Working on calendar

--- a/Other.css
+++ b/Other.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Arial;
+    /*font-family: Arial;*/
 }
 body {
     background-image:radial-gradient(circle at 0 0,#2fae8f,#2f92ae);
